<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item android:id="@+id/menuHome" android:icon="@drawable/ic_baseline_home_24" android:title="@string/lbl_home" app:showAsAction="ifRoom"/>
<item android:id="@+id/menuLibrary" android:icon="@drawable/ic_baseline_library_books_24" android:title="@string/lbl_library" app:showAsAction="ifRoom"/>
</menu>